# EdenredTools

./: install  pyproject.toml
scripts/: install.ps1  install.sh
src/edenredtools/cli/: commands.py  edenred_tools.py
src/edenredtools/cli/security/: crpyto.py
src/edenredtools/net/: url.py
src/edenredtools/oauth2/: common.py  identity_provider.py  proxies.py
src/edenredtools/oauth2/flows/: authorization.py  factory.py  registry.py
src/edenredtools/oauth2/proxies/: local.py  models.py
src/edenredtools/oauth2/proxies/templates/: redirect_callback.html
src/edenredtools/oauth2/tokens/: models.py  registry.py  validator.py
src/edenredtools/system/: broswer.py  dns.py  file.py  networking.py  platform.py  registry.py  url.py
